# drunc_ui

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  future_ci.yml  stable_ci.yml
controller/: app_tree.py  controller_interface.py  forms.py  fsm.py  tables.py  urls.py
controller/templates/controller/: app_tree_view.html  ers_logs.html  index.html
controller/templates/controller/partials/: app_tree_summary_partial.html  arguments_dialog.html  state_machine.html  tree_item.html
controller/templates/controller/static/: stylescntrl.css
controller/views/: __init__.py  pages.py  partials.py
docs/: code_overview.md  controller.md  deployment.md  development.md
drunc_docker_service/: Dockerfile  Dockerfile_lite  boot_session_manager.sh  boot_test_session.sh  entrypoint.sh  process-manager-kafka.json  ssh-setup.sh
drunc_ui/settings/: settings.py
example_deployment/: Caddyfile  deployment_settings.py  docker-compose.yml
example_deployment/tls/: certificate.pem  key.pem
interfaces/: controller_interface.py  session_manager_interface.py
main/: models.py
main/management/commands/: kafka_consumer.py  store_message.py
main/migrations/: 0004_druncmessage_topic.py
main/templates/main/: messages.html
process_manager/: process_manager_interface.py  tables.py  urls.py
process_manager/templates/process_manager/: index.html
process_manager/templates/process_manager/partials/: message_items.html
process_manager/templates/process_manager/static/: stylespm.css
process_manager/views/: pages.py  partials.py
scripts/: install_local_deps.ps1  install_local_deps.sh  talk_to_controller.py  talk_to_process_manager.py
session_manager/: tables.py
session_manager/templates/session_manager/: index.html
tests/controller/: test_app_tree.py  test_controller_interface.py  test_forms.py  test_fsm.py  test_tables.py
tests/controller/views/: test_partial_views.py
tests/process_manager/views/: test_partial_views.py
