[tool.poetry]
name = "drunc_ui"
version = "0.1.0"
description = "[Description for project.]"
authors = [
    "Ryan Smith <ryan.smith@imperial.ac.uk>",
    "Imperial College London RSE Team <ict-rse-team@imperial.ac.uk>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = "^5.1"
whitenoise = "^6.9.0"
drunc = { git = "https://github.com/DUNE-DAQ/drunc.git", rev = "606a97385b09ad22593acb63283c64cee4cb271a" }
druncschema = { git = "https://github.com/DUNE-DAQ/druncschema.git", rev = "e8c7272addc807bc0c32315863c44858b59080ab" }
django-tables2 = "^2.7.5"
django-bootstrap5 = "^25.1"
pytest-asyncio = "^0.25.3"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
django-stubs-ext = "^5.1.3"
requests = "^2.32.3"
types-protobuf = "^5.29.1.20250315"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0.0"
pytest-mypy = "^0.10.0"
pytest-mock = "^3.7.0"
pre-commit = "^4.1.0"
ruff = "^0.11.0"
djlint = "^1.36.4"
django-stubs = { extras = ["compatible-mypy"], version = "^5.1.3" }
pytest-django = "^4.10.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.0"
mkdocstrings-python = "^1.16.5"
mkdocs-material = "^9.6.8"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"


[tool.poetry.group.postgres.dependencies]
psycopg = { extras = ["binary"], version = "^3.2.6" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/", "manage.py", "*/migrations/", "ers/"]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["druncschema.*", "drunc.*", "django_tables2.*", "kafka.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "drunc_ui.settings"

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=. --cov-report=html --doctest-modules --ignore=manage.py --ignore=drunc_ui/settings/ --ignore=docs/ --ignore=example_deployment/ --ignore=ers/"
DJANGO_SETTINGS_MODULE = "drunc_ui.settings"
FAIL_INVALID_TEMPLATE_VARS = true

[tool.ruff]
exclude = ["*/migrations", "example_deployment/*", "ers/*"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D104",
] # Missing docstring in public module, Missing docstring in public package

[tool.djlint]
profile = "django"
indent = 2

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]
