[tool.poetry]
name = "drunc_ui"
version = "0.1.0"
description = "[Description for project.]"
authors = [
    "Imperial College London RSE Team <ict-rse-team@imperial.ac.uk>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
django = "^5.2"
whitenoise = "^6.9.0"
drunc = { git = "https://github.com/DUNE-DAQ/drunc.git", rev = "d411037139c52554bb2d1db307d520d1184d4e96" }
druncschema = { git = "https://github.com/DUNE-DAQ/druncschema.git", rev = "82e7fbcc780c4815e4ea910f111f6fe25a0aacfe" }
django-tables2 = "^2.7.5"
django-bootstrap5 = "^25.1"
pytest-asyncio = "^1.0.0"
django-crispy-forms = "^2.4"
crispy-bootstrap5 = "^2025.6"
django-stubs-ext = "^5.2.1"
requests = "^2.32.3"
types-protobuf = "^6.30.2.20250516"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^6.2.1"
pytest-mypy = "^1.0.1"
pytest-mock = "^3.7.0"
pre-commit = "^4.2.0"
ruff = "^0.12.0"
djlint = "^1.36.4"
django-stubs = { extras = ["compatible-mypy"], version = "^5.2.0" }
pytest-django = "^4.11.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.12"
mkdocs-material = "^9.6.14"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-section-index = "^0.3.10"


[tool.poetry.group.postgres.dependencies]
psycopg = { extras = ["binary"], version = "^3.2.9" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/", "manage.py", "*/migrations/", "ers/"]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["druncschema.*", "drunc.*", "django_tables2.*", "kafka.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "drunc_ui.settings"

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=. --cov-report=html --doctest-modules --ignore=manage.py --ignore=drunc_ui/settings/ --ignore=docs/ --ignore=example_deployment/ --ignore=ers/"
DJANGO_SETTINGS_MODULE = "drunc_ui.settings"
FAIL_INVALID_TEMPLATE_VARS = true

[tool.ruff]
exclude = ["*/migrations", "example_deployment/*", "ers/*"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D104",
] # Missing docstring in public module, Missing docstring in public package

[tool.djlint]
profile = "django"
indent = 2

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]
